# customer-churn-pipeline

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
airflow/dags/: churn_retraining_dag.py
backend/: __init__.py  evaluate.py  feature_engineering.py  predict.py  preprocessing.py  train.py  utils.py
