[tool.poetry]
name = "customer-churn-pipeline"
version = "0.1.0"
description = "A modular customer churn prediction pipeline with Streamlit, MLflow, Airflow, and Docker."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
plotly = "^5.22.0"
streamlit = "^1.36.0"
mlflow = "^2.14.2"
joblib = "^1.4.2"
apache-airflow = { version = "^2.9.2", optional = true }

[tool.poetry.extras]
airflow = ["apache-airflow"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
